  60.	[build]		jinmei
	Supported SunStudio C++ compiler.  Note: gtest still doesn't work.
	(Trac #251, svn r2310)

  59.	[bug]		jinmei
	lib/datasrc,bin/auth: The authoritative server could return a
	SERVFAIL with a partial answer if it finds a data source broken
	while looking for an answer.  This can happen, for example, if a
	zone that doesn't have an NS RR is configured and loaded as a
	sqlite3 data source. (Trac #249, r2286)

  58.	[bug]		jinmei
	Worked around an interaction issue between ASIO and standard C++
	library headers.  Without this ASIO didn't work: sometimes the
	application crashes, sometimes it blocked in the ASIO module.
	(Trac #248, svn r2187, r2190)

  57.	[func]		jinmei
	lib/datasrc: used a simpler version of Name::split (change 31) for
	better readability.  No behavior change. (Trac #200, svn r2159)

  56.	[func]*		jinmei
	lib/dns: renamed the library name to libdns++ to avoid confusion
	with the same name of library of BIND 9.
	(Trac #190, svn r2153)

  55.	[bug]		shane
	bin/xfrout: xfrout exception on Ctrl-C now no longer generates
	exception for 'Interrupted system call'
	(Track #136, svn r2147)

  54.	[bug]		zhanglikun
	bin/xfrout: Enable b10-xfrout can be launched in source
	code tree.
	(Trac #224, svn r2103)

  53.	[bug]		zhanglikun
	bin/bindctl: Generate a unique session ID by using 
	socket.gethostname() instead of socket.gethostbyname(), 
	since the latter one could make bindctl	stall if its own 
	host name can't be resolved.
	(Trac #228, svn r2096)

  52.	[func]		zhanglikun
	bin/xfrout: When xfrout is launched, check whether the
	socket file is being used by one running xfrout process, 
	if it is, exit from python.	If the file isn't a socket file 
	or nobody is listening, it will be removed. If it can't 
	be removed, exit from python.
	(Trac #151, svn r2091)

bind10-devel-20100602 released on June 2, 2010

  51.   [build]         jelte
	lib/python: Add bind10_config.py module for paths and